Добавлена публикация Event в Kafka